--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10847,4 +10847,14 @@
 	<item component="ComponentInfo{net.trilliarden.mematic/net.trilliarden.mematic.mainmenu.MainMenuActivity}" drawable="mematic" />
 	<item component="ComponentInfo{it.radiorai/it.rainet.raiplaysound.ui.SplashScreenActivity}" drawable="raiplay_sound" />
 	<item component="ComponentInfo{com.evgeniysharafan.tabatatimer/com.evgeniysharafan.tabatatimer.ui.activity.SetupActivity}" drawable="tabata_timer" />
+	<item component="ComponentInfo{coop.voce3/crc6412b36c0bdb318ff5.SplashActivity}" drawable="coopvoce" />
+	<item component="ComponentInfo{kz.mobile.mgov/kz.mobile.mgov.features.splash.SplashActivity}" drawable="egov_mobile" />
+	<item component="ComponentInfo{it.italotreno/it.italotreno.MainActivity}" drawable="italo_treno" />
+	<item component="ComponentInfo{com.jd.jdsports/com.jd.jdsports.ui.MainActivity}" drawable="jd_sports" />
+	<item component="ComponentInfo{com.myklarnamobile/com.klarna.MainActivity}" drawable="klarna" />
+	<item component="ComponentInfo{com.milowi.app/com.milowi.app.SplashActivity}" drawable="mi_lowi" />
+	<item component="ComponentInfo{de.mathema.privacyblur/de.mathema.privacyblur.MainActivity}" drawable="privacy_blur" />
+	<item component="ComponentInfo{com.tribeloo.app.twa/com.tribeloo.app.twa.LauncherActivity}" drawable="tribeloo" />
+	<item component="ComponentInfo{com.dately/com.zoontek.rnbootsplash.RNBootSplashActivity}" drawable="turn_up" />
+	<item component="ComponentInfo{com.kronos.mobile.android/com.kronos.mobile.android.alerts.PrerequisiteCheckActivity}" drawable="ukg_workforce_central" />
 </resources>
