--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -581,6 +581,16 @@
 	<item drawable="mematic" />
 	<item drawable="raiplay_sound" />
 	<item drawable="tabata_timer" />
+	<item drawable="coopvoce" />
+	<item drawable="egov_mobile" />
+	<item drawable="italo_treno" />
+	<item drawable="jd_sports" />
+	<item drawable="klarna" />
+	<item drawable="mi_lowi" />
+	<item drawable="privacy_blur" />
+	<item drawable="tribeloo" />
+	<item drawable="turn_up" />
+	<item drawable="ukg_workforce_central" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -3175,6 +3185,7 @@
 	<item drawable="cookpad" />
 	<item drawable="cool_market" />
 	<item drawable="cool_mic" />
+	<item drawable="coopvoce" />
 	<item drawable="coppel" />
 	<item drawable="cornerfly" />
 	<item drawable="cornie" />
@@ -3601,6 +3612,7 @@
 	<item drawable="egenda" />
 	<item drawable="egg_inc" />
 	<item drawable="eggtimer" />
+	<item drawable="egov_mobile" />
 	<item drawable="ehviewer" />
 	<item drawable="einkbro" />
 	<item drawable="eksi_sozluk" />
@@ -4511,6 +4523,7 @@
 	<item drawable="it" />
 	<item drawable="itag_one" />
 	<item drawable="italki" />
+	<item drawable="italo_treno" />
 	<item drawable="itaucard" />
 	<item drawable="itc_battles" />
 	<item drawable="itemku_lite" />
@@ -4541,6 +4554,7 @@
 	<item drawable="jaybird" />
 	<item drawable="jazz_world" />
 	<item drawable="jbl_headphones" />
+	<item drawable="jd_sports" />
 	<item drawable="jed" />
 	<item drawable="jefit" />
 	<item drawable="jelly_band" />
@@ -4671,6 +4685,7 @@
 	<item drawable="kk_launcher" />
 	<item drawable="kkp_mobile" />
 	<item drawable="klar" />
+	<item drawable="klarna" />
 	<item drawable="klck" />
 	<item drawable="klein_scope" />
 	<item drawable="kleptocats" />
@@ -5129,6 +5144,7 @@
 	<item drawable="mi_game_turbo" />
 	<item drawable="mi_health" />
 	<item drawable="mi_home" />
+	<item drawable="mi_lowi" />
 	<item drawable="mi_movistar" />
 	<item drawable="mi_pay" />
 	<item drawable="mi_remote" />
@@ -6222,6 +6238,7 @@
 	<item drawable="printer" />
 	<item drawable="prism" />
 	<item drawable="prisma" />
+	<item drawable="privacy_blur" />
 	<item drawable="privacy_browser" />
 	<item drawable="privacy_com" />
 	<item drawable="privacy_dashboard" />
@@ -7476,6 +7493,7 @@
 	<item drawable="trenitalia" />
 	<item drawable="trenord" />
 	<item drawable="tresorit" />
+	<item drawable="tribeloo" />
 	<item drawable="tricount" />
 	<item drawable="trigger" />
 	<item drawable="trillian" />
@@ -7529,6 +7547,7 @@
 	<item drawable="tureng_dictionary" />
 	<item drawable="turk_telekom" />
 	<item drawable="turkcell_dijital_operator" />
+	<item drawable="turn_up" />
 	<item drawable="turtl_request" />
 	<item drawable="turtl_notes" />
 	<item drawable="tusky" />
@@ -7587,6 +7606,7 @@
 	<item drawable="ufficio_postale" />
 	<item drawable="ujjivan" />
 	<item drawable="ukg" />
+	<item drawable="ukg_workforce_central" />
 	<item drawable="uklon" />
 	<item drawable="ukraine_alarm" />
 	<item drawable="ul" />
