--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -591,6 +591,16 @@
 	<item drawable="tribeloo" />
 	<item drawable="turn_up" />
 	<item drawable="ukg_workforce_central" />
+	<item drawable="amethyst" />
+	<item drawable="droidedit" />
+	<item drawable="free_tube_cordova" />
+	<item drawable="heureka" />
+	<item drawable="meditation_down_dog" />
+	<item drawable="system_ui_tuner" />
+	<item drawable="tenpo" />
+	<item drawable="torrents_csv_android" />
+	<item drawable="webapps_sandboxed_browser" />
+	<item drawable="zap_map" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -2240,6 +2250,7 @@
 	<item drawable="ameli" />
 	<item drawable="american_airlines" />
 	<item drawable="americanas_delivery" />
+	<item drawable="amethyst" />
 	<item drawable="amex_mobile" />
 	<item drawable="amigo" />
 	<item drawable="amino" />
@@ -3518,6 +3529,7 @@
 	<item drawable="droid_keeper" />
 	<item drawable="droidcam" />
 	<item drawable="droidcam_obs" />
+	<item drawable="droidedit" />
 	<item drawable="droidfs" />
 	<item drawable="droidrec" />
 	<item drawable="drom" />
@@ -3953,6 +3965,7 @@
 	<item drawable="free_fire" />
 	<item drawable="free_fire_max" />
 	<item drawable="free_now_driver" />
+	<item drawable="free_tube_cordova" />
 	<item drawable="freebloks" />
 	<item drawable="freecharge" />
 	<item drawable="freecodecamp" />
@@ -4265,6 +4278,7 @@
 	<item drawable="hermes" />
 	<item drawable="hermit" />
 	<item drawable="hero_lab_importer" />
+	<item drawable="heureka" />
 	<item drawable="hevy" />
 	<item drawable="hex" />
 	<item drawable="hex_hexified" />
@@ -5061,6 +5075,7 @@
 	<item drawable="medibang_paint" />
 	<item drawable="medibank" />
 	<item drawable="medisafe" />
+	<item drawable="meditation_down_dog" />
 	<item drawable="meditation_studio" />
 	<item drawable="medito" />
 	<item drawable="meditopia" />
@@ -7195,6 +7210,7 @@
 	<item drawable="syphon" />
 	<item drawable="syslog" />
 	<item drawable="system_app_safe_remover" />
+	<item drawable="system_ui_tuner" />
 	<item drawable="systemui_tuner" />
 	<item drawable="szkolny" />
 
@@ -7290,6 +7306,7 @@
 	<item drawable="temple_run_two" />
 	<item drawable="tennis_temple" />
 	<item drawable="tennis_tv" />
+	<item drawable="tenpo" />
 	<item drawable="tenthapp" />
 	<item drawable="teo" />
 	<item drawable="terabox" />
@@ -7443,6 +7460,7 @@
 	<item drawable="toronto_green_p" />
 	<item drawable="torque" />
 	<item drawable="torrdroid" />
+	<item drawable="torrents_csv_android" />
 	<item drawable="torrserve" />
 	<item drawable="toss" />
 	<item drawable="total_commander" />
@@ -7894,6 +7912,7 @@
 	<item drawable="weatherx_forecast" />
 	<item drawable="weawow" />
 	<item drawable="web_video_caster" />
+	<item drawable="webapps_sandboxed_browser" />
 	<item drawable="webnovel" />
 	<item drawable="webopac" />
 	<item drawable="webtoon" />
@@ -8154,6 +8173,7 @@
 	<item drawable="zalora" />
 	<item drawable="zameen" />
 	<item drawable="zanti" />
+	<item drawable="zap_map" />
 	<item drawable="zapp" />
 	<item drawable="zappka" />
 	<item drawable="zapya" />
