--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10857,4 +10857,14 @@
 	<item component="ComponentInfo{com.tribeloo.app.twa/com.tribeloo.app.twa.LauncherActivity}" drawable="tribeloo" />
 	<item component="ComponentInfo{com.dately/com.zoontek.rnbootsplash.RNBootSplashActivity}" drawable="turn_up" />
 	<item component="ComponentInfo{com.kronos.mobile.android/com.kronos.mobile.android.alerts.PrerequisiteCheckActivity}" drawable="ukg_workforce_central" />
+	<item component="ComponentInfo{com.vitorpamplona.amethyst/com.vitorpamplona.amethyst.ui.MainActivity}" drawable="amethyst" />
+	<item component="ComponentInfo{com.aor.droidedit/com.aor.droidedit.DroidEditFreeActivity}" drawable="droidedit" />
+	<item component="ComponentInfo{io.freetubeapp.freetube/io.freetubeapp.freetube.MainActivity}" drawable="free_tube_cordova" />
+	<item component="ComponentInfo{cz.ursimon.heureka.client.android/cz.heureka.client.android.controller.home.HomeActivity}" drawable="heureka" />
+	<item component="ComponentInfo{com.downdogapp.meditation/com.downdogapp.AppActivity}" drawable="meditation_down_dog" />
+	<item component="ComponentInfo{com.bryancandi.android.uituner/com.bryancandi.android.uituner.MainActivity}" drawable="system_ui_tuner" />
+	<item component="ComponentInfo{com.krealo.tenpo/com.krealo.tenpo.MainActivity}" drawable="tenpo" />
+	<item component="ComponentInfo{com.torrents_csv_android/com.torrents_csv_android.MainActivity}" drawable="torrents_csv_android" />
+	<item component="ComponentInfo{com.tobykurien.webapps/com.tobykurien.webapps.activity.MainActivity}" drawable="webapps_sandboxed_browser" />
+	<item component="ComponentInfo{com.zapmap.zapmap/com.zapmap.zapmap.activity.SplashScreenActivity}" drawable="zap_map" />
 </resources>
