--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10867,4 +10867,14 @@
 	<item component="ComponentInfo{com.torrents_csv_android/com.torrents_csv_android.MainActivity}" drawable="torrents_csv_android" />
 	<item component="ComponentInfo{com.tobykurien.webapps/com.tobykurien.webapps.activity.MainActivity}" drawable="webapps_sandboxed_browser" />
 	<item component="ComponentInfo{com.zapmap.zapmap/com.zapmap.zapmap.activity.SplashScreenActivity}" drawable="zap_map" />
+	<item component="ComponentInfo{com.mgensuite.airfox.recharge/com.mgensuite.airfox.recharge.MainActivity}" drawable="banqi" />
+	<item component="ComponentInfo{com.daily.journal.diary.lock.mood.tracker.free/com.daily.journal.diary.lock.mood.tracker.free.activity.MainActivity}" drawable="daily_diary" />
+	<item component="ComponentInfo{in.lucidify.dairybook/in.lucidify.diarybook.ui.main.ActivityMain}" drawable="diary_book" />
+	<item component="ComponentInfo{com.lyft.android.mexicocityapp/com.citibikenyc.citibike.ui.main.SplashActivity}" drawable="ecobici" />
+	<item component="ComponentInfo{com.educationperfect.client/com.educationperfect.client.MainActivity}" drawable="ep_student" />
+	<item component="ComponentInfo{af.nasri.fancyname/af.nasri.gamingname.Views.MainActivity}" drawable="fancy_name" />
+	<item component="ComponentInfo{com.finternet.plutus/com.finternet.plutus.MainActivity}" drawable="gullak" />
+	<item component="ComponentInfo{com.nglreactnative/com.nglreactnative.MainActivity}" drawable="ngl" />
+	<item component="ComponentInfo{com.clairmail.sccu.mbanking/com.orcc.MainActivity}" drawable="space_coast_cu_mobile" />
+	<item component="ComponentInfo{com.telepo.mobile.android.destiny/com.telepo.mobile.android.ui.MainFragmentActivity}" drawable="dstny" />
 </resources>
