--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -601,6 +601,16 @@
 	<item drawable="torrents_csv_android" />
 	<item drawable="webapps_sandboxed_browser" />
 	<item drawable="zap_map" />
+	<item drawable="banqi" />
+	<item drawable="daily_diary" />
+	<item drawable="diary_book" />
+	<item drawable="ecobici" />
+	<item drawable="ep_student" />
+	<item drawable="fancy_name" />
+	<item drawable="gullak" />
+	<item drawable="ngl" />
+	<item drawable="space_coast_cu_mobile" />
+	<item drawable="dstny" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -2584,6 +2594,7 @@
 	<item drawable="banki_ru" />
 	<item drawable="bankingfour" />
 	<item drawable="banorte" />
+	<item drawable="banqi" />
 	<item drawable="banque_tarneaud" />
 	<item drawable="bapp" />
 	<item drawable="bar_finder_hannover" />
@@ -3296,6 +3307,7 @@
 	<item drawable="dadish" />
 	<item drawable="dadish_two" />
 	<item drawable="daijisho" />
+	<item drawable="daily_diary" />
 	<item drawable="daily_note" />
 	<item drawable="daily_schedule" />
 	<item drawable="daily_yoga" />
@@ -3423,6 +3435,7 @@
 	<item drawable="diarium" />
 	<item drawable="diaro" />
 	<item drawable="diary" />
+	<item drawable="diary_book" />
 	<item drawable="dice" />
 	<item drawable="dicer" />
 	<item drawable="diceware_password_generator" />
@@ -3549,6 +3562,7 @@
 	<item drawable="dsb" />
 	<item drawable="dsbmobile" />
 	<item drawable="dsign" />
+	<item drawable="dstny" />
 	<item drawable="du_recorder" />
 	<item drawable="du_updater" />
 	<item drawable="dubsmash" />
@@ -3602,6 +3616,7 @@
 	<item drawable="ebookdroid" />
 	<item drawable="eboox" />
 	<item drawable="ecobee" />
+	<item drawable="ecobici" />
 	<item drawable="ecoledirecte" />
 	<item drawable="economic_times" />
 	<item drawable="economist" />
@@ -3669,6 +3684,7 @@
 	<item drawable="epic_games" />
 	<item drawable="epic_seven" />
 	<item drawable="epik" />
+	<item drawable="ep_student" />
 	<item drawable="epson_iprojection" />
 	<item drawable="epsxe" />
 	<item drawable="eqfy_equalizer" />
@@ -3770,6 +3786,7 @@
 	<item drawable="fampay" />
 	<item drawable="fan_duel" />
 	<item drawable="fancade" />
+	<item drawable="fancy_name" />
 	<item drawable="fandango" />
 	<item drawable="fandom" />
 	<item drawable="fanfiction" />
@@ -4195,6 +4212,7 @@
 	<item drawable="guitar_songs" />
 	<item drawable="guitar_tuna" />
 	<item drawable="guitar_tuner" />
+	<item drawable="gullak" />
 	<item drawable="gumtree" />
 	<item drawable="gurgle" />
 	<item drawable="guriddo" />
@@ -5635,6 +5653,7 @@
 	<item drawable="nfl_sunday_ticket" />
 	<item drawable="nfs_no_limits" />
 	<item drawable="nfsee" />
+	<item drawable="ngl" />
 	<item drawable="nhl" />
 	<item drawable="nhs_app" />
 	<item drawable="niagara_launcher" />
@@ -6985,6 +7004,7 @@
 	<item drawable="soundcorset_tuner_metronome" />
 	<item drawable="soundrs" />
 	<item drawable="southwest_airlines" />
+	<item drawable="space_coast_cu_mobile" />
 	<item drawable="spacedesk" />
 	<item drawable="spaceflight_simulator" />
 	<item drawable="spacepeng" />
