--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10877,4 +10877,14 @@
 	<item component="ComponentInfo{com.nglreactnative/com.nglreactnative.MainActivity}" drawable="ngl" />
 	<item component="ComponentInfo{com.clairmail.sccu.mbanking/com.orcc.MainActivity}" drawable="space_coast_cu_mobile" />
 	<item component="ComponentInfo{com.telepo.mobile.android.destiny/com.telepo.mobile.android.ui.MainFragmentActivity}" drawable="dstny" />
+	<item component="ComponentInfo{com.bykea.pk/com.bykea.pk.screens.activities.SplashActivity}" drawable="bykea" />
+	<item component="ComponentInfo{com.notegg.calla/com.notegg.calla.new_calla.NewMainActivity}" drawable="calla" />
+	<item component="ComponentInfo{de.knowunity.app/de.knowunity.app.MainActivity}" drawable="knowunity" />
+	<item component="ComponentInfo{au.gov.mygov.mygovapp/au.gov.mygov.mygovapp.features.welcome.WelcomeActivity}" drawable="mygov" />
+	<item component="ComponentInfo{com.hello.zuttomo/com.hello.zuttomo.MainActivity}" drawable="naunau" />
+	<item component="ComponentInfo{br.com.radios.radiosmobile.radiosnet/br.com.radios.radiosmobile.radiosnet.activity.MainActivity}" drawable="radiosnet" />
+	<item component="ComponentInfo{com.testbook.tbapp/com.testbook.tbapp.android.SplashActivity}" drawable="testbook" />
+	<item component="ComponentInfo{com.utec.utec/com.utec.utec.ui.user.LoginHomeActivity}" drawable="u_tec" />
+	<item component="ComponentInfo{com.waplog.social/com.waplog.social.CamouflageDisabled}" drawable="waplog" />
+	<item component="ComponentInfo{fi.digia.suomi112/fi.digia.suomi112.MainActivity}" drawable="_112_suomi" />
 </resources>
