--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -611,6 +611,16 @@
 	<item drawable="ngl" />
 	<item drawable="space_coast_cu_mobile" />
 	<item drawable="dstny" />
+	<item drawable="bykea" />
+	<item drawable="calla" />
+	<item drawable="knowunity" />
+	<item drawable="mygov" />
+	<item drawable="naunau" />
+	<item drawable="radiosnet" />
+	<item drawable="testbook" />
+	<item drawable="u_tec" />
+	<item drawable="waplog" />
+	<item drawable="_112_suomi" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -1928,6 +1938,7 @@
 	<item drawable="_10_play" />
 	<item drawable="_1111" />
 	<item drawable="_11pet" />
+	<item drawable="_112_suomi" />
 	<item drawable="_12min" />
 	<item drawable="_17track" />
 	<item drawable="_1800flowers" />
@@ -2908,6 +2919,7 @@
 	<item drawable="bvg" />
 	<item drawable="by_dot_u" />
 	<item drawable="bybit" />
+	<item drawable="bykea" />
 	<item drawable="byte_video" />
 
 	<category title="C" />
@@ -2933,6 +2945,7 @@
 	<item drawable="calibre_cloud" />
 	<item drawable="call_of_duty_mobile" />
 	<item drawable="call_recorder" />
+	<item drawable="calla" />
 	<item drawable="callapp" />
 	<item drawable="calm" />
 	<item drawable="calmaria" />
@@ -4729,6 +4742,7 @@
 	<item drawable="kmplayer" />
 	<item drawable="knockknock" />
 	<item drawable="knowledge" />
+	<item drawable="knowunity" />
 	<item drawable="kobo_books" />
 	<item drawable="kocho" />
 	<item drawable="kodi" />
@@ -5490,6 +5504,7 @@
 	<item drawable="mydpd" />
 	<item drawable="myfastweb" />
 	<item drawable="mygate" />
+	<item drawable="mygov" />
 	<item drawable="mygovid" />
 	<item drawable="mygp" />
 	<item drawable="myhannover" />
@@ -5556,6 +5571,7 @@
 	<item drawable="natural_metronome" />
 	<item drawable="natural_scientific_calculator" />
 	<item drawable="natwest" />
+	<item drawable="naunau" />
 	<item drawable="navbar_apps" />
 	<item drawable="naver" />
 	<item drawable="naver_cafe" />
@@ -6398,6 +6414,7 @@
 	<item drawable="radio_s" />
 	<item drawable="radiodroid" />
 	<item drawable="radiogram" />
+	<item drawable="radiosnet" />
 	<item drawable="radioupnp" />
 	<item drawable="raiffeisen" />
 	<item drawable="railcard" />
@@ -7336,6 +7353,7 @@
 	<item drawable="tesco" />
 	<item drawable="tesla" />
 	<item drawable="teslaunread" />
+	<item drawable="testbook" />
 	<item drawable="testy_hardware_check" />
 	<item drawable="tetris" />
 	<item drawable="texpand" />
@@ -7623,6 +7641,7 @@
 
 	<category title="U" />
 	<item drawable="u_dictionary" />
+	<item drawable="u_tec" />
 	<item drawable="uala" />
 	<item drawable="uber" />
 	<item drawable="uber_driver" />
@@ -7894,6 +7913,7 @@
 	<item drawable="walpy" />
 	<item drawable="walrus" />
 	<item drawable="wamr" />
+	<item drawable="waplog" />
 	<item drawable="warden" />
 	<item drawable="warframe" />
 	<item drawable="warnwetter" />
