--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10887,4 +10887,14 @@
 	<item component="ComponentInfo{com.utec.utec/com.utec.utec.ui.user.LoginHomeActivity}" drawable="u_tec" />
 	<item component="ComponentInfo{com.waplog.social/com.waplog.social.CamouflageDisabled}" drawable="waplog" />
 	<item component="ComponentInfo{fi.digia.suomi112/fi.digia.suomi112.MainActivity}" drawable="_112_suomi" />
+	<item component="ComponentInfo{com.b2w.americanas/com.b2w.main.activity.MainActivity}" drawable="americanas" />
+	<item component="ComponentInfo{com.plokia.ClassUp/com.plokia.ClassUp.ClassUpActivity}" drawable="classup" />
+	<item component="ComponentInfo{com.clippercard.mobile.clipper/com.zoontek.rnbootsplash.RNBootSplashActivity}" drawable="clipper" />
+	<item component="ComponentInfo{com.brunosousa.drawbricks/com.brunosousa.drawbricks.SplashScreenActivity}" drawable="draw_bricks" />
+	<item component="ComponentInfo{com.samruston.hurry/com.samruston.hurry.ui.events.EventsActivity}" drawable="hurry" />
+	<item component="ComponentInfo{com.queue.queuebee/com.queue.queuebee.Home_}" drawable="queuebee" />
+	<item component="ComponentInfo{com.remitly.androidapp/com.remitly.androidapp.activities.NarwhalRootActivity}" drawable="remitly" />
+	<item component="ComponentInfo{net.aramex.sas/com.aramex.shopandshipmobile.ui.splash.SplashActivity}" drawable="shop_and_ship" />
+	<item component="ComponentInfo{com.smashco.smash/com.smashco.smash.controllers.SplashScreenActivity}" drawable="smash_file_transfer" />
+	<item component="ComponentInfo{com.tocktix.consumer/com.tocktix.consumer.SplashActivity}" drawable="tock" />
 </resources>
