--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -621,6 +621,16 @@
 	<item drawable="u_tec" />
 	<item drawable="waplog" />
 	<item drawable="_112_suomi" />
+	<item drawable="americanas" />
+	<item drawable="classup" />
+	<item drawable="clipper" />
+	<item drawable="draw_bricks" />
+	<item drawable="hurry" />
+	<item drawable="queuebee" />
+	<item drawable="remitly" />
+	<item drawable="shop_and_ship" />
+	<item drawable="smash_file_transfer" />
+	<item drawable="tock" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -2270,6 +2280,7 @@
 	<item drawable="ameixa_monochrome" />
 	<item drawable="ameli" />
 	<item drawable="american_airlines" />
+	<item drawable="americanas" />
 	<item drawable="americanas_delivery" />
 	<item drawable="amethyst" />
 	<item drawable="amex_mobile" />
@@ -3128,6 +3139,7 @@
 	<item drawable="classic_power_menu" />
 	<item drawable="classicboy" />
 	<item drawable="classnotes" />
+	<item drawable="classup" />
 	<item drawable="classyshark3xodus" />
 	<item drawable="classyshark3xodus_appinfo" />
 	<item drawable="clay_jam" />
@@ -3146,6 +3158,7 @@
 	<item drawable="clip_studio_paint" />
 	<item drawable="clipboardcleaner" />
 	<item drawable="clipeus" />
+	<item drawable="clipper" />
 	<item drawable="clippy" />
 	<item drawable="clipt" />
 	<item drawable="cloud_mail_ru" />
@@ -3540,6 +3553,7 @@
 	<item drawable="dragalia_lost" />
 	<item drawable="dragon_city" />
 	<item drawable="dragonballz" />
+	<item drawable="draw_bricks" />
 	<item drawable="dream_epg" />
 	<item drawable="dream_league_soccer" />
 	<item drawable="dream11" />
@@ -4420,6 +4434,7 @@
 	<item drawable="hungry_shark" />
 	<item drawable="hunkemoeller_dessous" />
 	<item drawable="huntington" />
+	<item drawable="hurry" />
 	<item drawable="husky" />
 	<item drawable="hvv" />
 	<item drawable="hydro_coach" />
@@ -6373,6 +6388,7 @@
 	<item drawable="quantfury" />
 	<item drawable="quasseldroid" />
 	<item drawable="questrade" />
+	<item drawable="queuebee" />
 	<item drawable="quick__pic" />
 	<item drawable="quick_calculation" />
 	<item drawable="quick_edit" />
@@ -6498,6 +6514,7 @@
 	<item drawable="remember_the_milk" />
 	<item drawable="remind" />
 	<item drawable="remini" />
+	<item drawable="remitly" />
 	<item drawable="remnote" />
 	<item drawable="remote_fingerprint_unlock" />
 	<item drawable="remote_mouse" />
@@ -6807,6 +6824,7 @@
 	<item drawable="shonen_jump_plus" />
 	<item drawable="shoot_i_smoke" />
 	<item drawable="shop" />
+	<item drawable="shop_and_ship" />
 	<item drawable="shopback" />
 	<item drawable="shopee" />
 	<item drawable="shopify" />
@@ -6945,6 +6963,7 @@
 	<item drawable="smartbike" />
 	<item drawable="smartpack" />
 	<item drawable="smartthings" />
+	<item drawable="smash_file_transfer" />
 	<item drawable="smash_hit" />
 	<item drawable="smbc" />
 	<item drawable="smh" />
@@ -7462,6 +7481,7 @@
 	<item drawable="tng_ewallet" />
 	<item drawable="to_dont" />
 	<item drawable="toca_life_world" />
+	<item drawable="tock" />
 	<item drawable="todark" />
 	<item drawable="today" />
 	<item drawable="today_weather" />
