fix merge conflicts

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -8480,6 +8480,7 @@
 	<item component="ComponentInfo{dev.kraimoz.mangex_studio/dev.kraimoz.mangex_studio.MainActivity}" drawable="mangex" />
 	<item component="ComponentInfo{dev.linwood.butterfly/dev.linwood.butterfly.MainActivity}" drawable="linwood_butterfly" />
 	<item component="ComponentInfo{dev.lonami.klooni/dev.lonami.klooni.AndroidLauncher}" drawable="_1010_klooni" />
+	<item component="ComponentInfo{dev.lucanlm.antimine/dev.lucasnlm.antimine.main.MainActivity}" drawable="antimine" />
 	<item component="ComponentInfo{dev.lucanlm.antimine/dev.lucasnlm.antimine.splash.SplashActivity}" drawable="antimine" />
 	<item component="ComponentInfo{dev.marchello.sharik/dev.marchello.sharik.MainActivity}" drawable="sharik" />
 	<item component="ComponentInfo{dev.msfjarvis.aps/com.zeapo.pwdstore.LaunchActivity}" drawable="passwordstore_alt" />
@@ -10735,4 +10736,14 @@
 	<item component="ComponentInfo{com.goodwy.audiobooklite/com.goodwy.audiobooklite.features.MainActivity}" drawable="playbooks_lite" />
 	<item component="ComponentInfo{tk.hack5.treblecheck/tk.hack5.treblecheck.ScrollingActivity}" drawable="treble_info" />
 	<item component="ComponentInfo{com.arlosoft.macrodroid.helper/com.arlosoft.macrodroid.helper.ui.HomeScreenActivity}" drawable="md_helper" />
+	<item component="ComponentInfo{com.pixelapestudios.bluk/com.pixelapestudios.bluk.RunnerActivity}" drawable="bluk" />
+	<item component="ComponentInfo{apps.ijp.coveros/apps.ijp.coveros.CoverOSSettings}" drawable="coverscreen_os" />
+	<item component="ComponentInfo{com.mediocre.commute/com.mediocre.commute.Main}" drawable="does_not_commute" />
+	<item component="ComponentInfo{air.com.gamebrain.hocus/air.com.gamebrain.hocus.AppEntry}" drawable="hocus" />
+	<item component="ComponentInfo{com.unbrokensoftware.launchbox/crc645d6efdf1b6cda277.MainActivity}" drawable="launchbox" />
+	<item component="ComponentInfo{sarsa.minmax.resiconpack/sarsa.minmax.resiconpack.activities.SplashActivity}" drawable="resicon_flat" />
+	<item component="ComponentInfo{smellymoo.sand/smellymoo.sand.Main}" drawable="sand_box" />
+	<item component="ComponentInfo{com.paradyme.solarsmash/com.unity3d.player.UnityPlayerActivity}" drawable="solar_smash" />
+	<item component="ComponentInfo{ru.iamtagir.game.android/com.unity3d.player.UnityPlayerActivity}" drawable="that_level_again" />
+	<item component="ComponentInfo{com.netmarble.nanagb/com.netmarble.fpplugin.FPActivity}" drawable="the_seven_deadly_sins" />
 </resources>
