--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -454,6 +454,16 @@
 	<item drawable="playbook_lite" />
 	<item drawable="treble_info" />
 	<item drawable="md_helper" />
+	<item drawable="bluk" />
+	<item drawable="coverscreen_os" />
+	<item drawable="does_not_commute" />
+	<item drawable="hocus" />
+	<item drawable="launchbox" />
+	<item drawable="resicon_flat" />
+	<item drawable="sand_box" />
+	<item drawable="solar_smash" />
+	<item drawable="that_level_again" />
+	<item drawable="the_seven_deadly_sins" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -2617,6 +2627,7 @@
 	<item drawable="blued" />
 	<item drawable="blueprint" />
 	<item drawable="blueprints_kustom" />
+	<item drawable="bluk" />
 	<item drawable="blurone" />
 	<item drawable="blutv" />
 	<item drawable="blynk" />
@@ -3042,6 +3053,7 @@
 	<item drawable="coursera" />
 	<item drawable="courtreserve" />
 	<item drawable="cove_security" />
+	<item drawable="coverscreen_os" />
 	<item drawable="covpass" />
 	<item drawable="cowboy" />
 	<item drawable="cozi_family_organizer" />
@@ -3300,6 +3312,7 @@
 	<item drawable="documents" />
 	<item drawable="dodo_pizza" />
 	<item drawable="dodocodes" />
+	<item drawable="does_not_commute" />
 	<item drawable="dog_scroll" />
 	<item drawable="doggy_time" />
 	<item drawable="doki_doki_literature_club" />
@@ -4109,6 +4122,7 @@
 	<item drawable="hltv" />
 	<item drawable="ho" />
 	<item drawable="hobi" />
+	<item drawable="hocus" />
 	<item drawable="holavpn" />
 	<item drawable="holo_launcher" />
 	<item drawable="holo_launcher_hd" />
@@ -4560,6 +4574,7 @@
 	<item drawable="last__pass_authenticator" />
 	<item drawable="last_day_on_earth_survival" />
 	<item drawable="last_fm" />
+	<item drawable="launchbox" />
 	<item drawable="lawnchair_launcher" />
 	<item drawable="lawnchair_launcher_settings" />
 	<item drawable="lawnicons" />
@@ -6236,6 +6251,7 @@
 	<item drawable="replit" />
 	<item drawable="rescuetime_classic" />
 	<item drawable="reserve" />
+	<item drawable="resicon_flat" />
 	<item drawable="residualvm" />
 	<item drawable="resilio_sync" />
 	<item drawable="resplash" />
@@ -6409,6 +6425,7 @@
 	<item drawable="samsung_usb_backup" />
 	<item drawable="samsung_user_manual" />
 	<item drawable="samsung_video" />
+	<item drawable="sand_box" />
 	<item drawable="sangoma_connect" />
 	<item drawable="sanitas" />
 	<item drawable="santander" />
@@ -6685,6 +6702,7 @@
 	<item drawable="sofascore" />
 	<item drawable="sofi" />
 	<item drawable="softethervpn" />
+	<item drawable="solar_smash" />
 	<item drawable="solgen_beacon" />
 	<item drawable="solid_explorer" />
 	<item drawable="solitaire" />
@@ -7063,6 +7081,7 @@
 	<item drawable="tg_monet" />
 	<item drawable="thaichana" />
 	<item drawable="thanox" />
+	<item drawable="that_level_again" />
 	<item drawable="the__score" />
 	<item drawable="the__score_esports" />
 	<item drawable="the_baby_in_yellow" />
@@ -7077,6 +7096,7 @@
 	<item drawable="the_new_york_times_crossword" />
 	<item drawable="the_powder_toy" />
 	<item drawable="the_rock_clock" />
+	<item drawable="the_seven_deadly_sins" />
 	<item drawable="the_simpsons_tapped_out" />
 	<item drawable="the_sims" />
 	<item drawable="the_sims_freeplay" />
