--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10897,4 +10897,14 @@
 	<item component="ComponentInfo{net.aramex.sas/com.aramex.shopandshipmobile.ui.splash.SplashActivity}" drawable="shop_and_ship" />
 	<item component="ComponentInfo{com.smashco.smash/com.smashco.smash.controllers.SplashScreenActivity}" drawable="smash_file_transfer" />
 	<item component="ComponentInfo{com.tocktix.consumer/com.tocktix.consumer.SplashActivity}" drawable="tock" />
+	<item component="ComponentInfo{com.wahoofitness.boltcompanion/com.wahoofitness.boltcompanion.BCMainActivity}" drawable="elemnt" />
+	<item component="ComponentInfo{tr.gov.turkiye.edevlet.kapisi/tr.gov.turkiye.edevlet.kapisi.ui.splash.SplashActivity}" drawable="e_devlet" />
+	<item component="ComponentInfo{net.fieldagent/net.fieldagent.modules.splash.SplashActivity}" drawable="field_agent" />
+	<item component="ComponentInfo{com.jetblue.JetBlueAndroid/com.jetblue.android.splash.SplashActivity}" drawable="jetblue" />
+	<item component="ComponentInfo{com.marrow/com.marrow.ui.activities.onboarding.splash.SplashActivity}" drawable="marrow" />
+	<item component="ComponentInfo{com.neofinancial.neo/com.neofinancial.neo.base.ui.RootActivity}" drawable="neo_financial" />
+	<item component="ComponentInfo{offo.vl.ru.offo/offo.vl.ru.offo.ui.SplashScreen}" drawable="offo" />
+	<item component="ComponentInfo{com.deliverynow/foody.vn.deliverynow.SplashActivity}" drawable="shopeefood" />
+	<item component="ComponentInfo{com.palmtronix.shreddit.v1/com.palmtronix.shreddit.v1.view.AuthenticateActivity}" drawable="shreddit" />
+	<item component="ComponentInfo{com.claudivan.agendadoestudanteplus/com.claudivan.agendadoestudanteplus.Activities.MainActivity}" drawable="student_calendar" />
 </resources>
