--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -631,6 +631,16 @@
 	<item drawable="shop_and_ship" />
 	<item drawable="smash_file_transfer" />
 	<item drawable="tock" />
+	<item drawable="elemnt" />
+	<item drawable="e_devlet" />
+	<item drawable="field_agent" />
+	<item drawable="jetblue" />
+	<item drawable="marrow" />
+	<item drawable="neo_financial" />
+	<item drawable="offo" />
+	<item drawable="shopeefood" />
+	<item drawable="shreddit" />
+	<item drawable="student_calendar" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -3617,6 +3627,7 @@
 
 	<category title="E" />
 	<item drawable="e3dc_portal" />
+	<item drawable="e_devlet" />
 	<item drawable="e_rezept" />
 	<item drawable="e_trade" />
 	<item drawable="ear_one" />
@@ -3675,6 +3686,7 @@
 	<item drawable="electronics" />
 	<item drawable="electrum_btc_wallet" />
 	<item drawable="element" />
+	<item drawable="elemnt" />
 	<item drawable="elevate" />
 	<item drawable="ella_thegame" />
 	<item drawable="emag" />
@@ -3855,6 +3867,7 @@
 	<item drawable="fidelity_investments" />
 	<item drawable="fidme" />
 	<item drawable="fido" />
+	<item drawable="field_agent" />
 	<item drawable="fifa_companion" />
 	<item drawable="fifa_mobile" />
 	<item drawable="fight_club" />
@@ -4623,6 +4636,7 @@
 	<item drawable="jenius" />
 	<item drawable="jerboa_for_lemmy" />
 	<item drawable="jetaudio" />
+	<item drawable="jetblue" />
 	<item drawable="jetiq_student" />
 	<item drawable="jetispot" />
 	<item drawable="jetisteam" />
@@ -5081,6 +5095,7 @@
 	<item drawable="mario_kart_tour" />
 	<item drawable="market_pulse" />
 	<item drawable="marks" />
+	<item drawable="marrow" />
 	<item drawable="marusya" />
 	<item drawable="marvel_champions" />
 	<item drawable="marvel_comics" />
@@ -5626,6 +5641,7 @@
 	<item drawable="nekosms" />
 	<item drawable="neo_backup" />
 	<item drawable="neo_feed" />
+	<item drawable="neo_financial" />
 	<item drawable="neo_launcher" />
 	<item drawable="neo_store" />
 	<item drawable="neo_wellbeing" />
@@ -5820,6 +5836,7 @@
 	<item drawable="office_reader" />
 	<item drawable="officesuite" />
 	<item drawable="offlinesurvivalmanual" />
+	<item drawable="offo" />
 	<item drawable="ohio_state" />
 	<item drawable="ohmsnow" />
 	<item drawable="oi_file_manager" />
@@ -6827,6 +6844,7 @@
 	<item drawable="shop_and_ship" />
 	<item drawable="shopback" />
 	<item drawable="shopee" />
+	<item drawable="shopeefood" />
 	<item drawable="shopify" />
 	<item drawable="shortcut_maker" />
 	<item drawable="shortcut_to_my_apps" />
@@ -6836,6 +6854,7 @@
 	<item drawable="showroom" />
 	<item drawable="showtime" />
 	<item drawable="shpock" />
+	<item drawable="shreddit" />
 	<item drawable="shudder" />
 	<item drawable="shutterfly" />
 	<item drawable="shuttl" />
@@ -7170,6 +7189,7 @@
 	<item drawable="strongswan" />
 	<item drawable="struckd" />
 	<item drawable="student_beans" />
+	<item drawable="student_calendar" />
 	<item drawable="student_planner" />
 	<item drawable="student_square" />
 	<item drawable="studentvue" />
