--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10907,4 +10907,14 @@
 	<item component="ComponentInfo{com.deliverynow/foody.vn.deliverynow.SplashActivity}" drawable="shopeefood" />
 	<item component="ComponentInfo{com.palmtronix.shreddit.v1/com.palmtronix.shreddit.v1.view.AuthenticateActivity}" drawable="shreddit" />
 	<item component="ComponentInfo{com.claudivan.agendadoestudanteplus/com.claudivan.agendadoestudanteplus.Activities.MainActivity}" drawable="student_calendar" />
+	<item component="ComponentInfo{com.coke.cokeon/jp.co.cocacola.vmapp.ui.start.SplashActivity}" drawable="coke_on" />
+	<item component="ComponentInfo{com.eterno/com.newshunt.app.view.activity.Splash}" drawable="dailyhunt" />
+	<item component="ComponentInfo{com.c4cat.dynamix/com.unity3d.player.UnityPlayerActivity}" drawable="dynamix" />
+	<item component="ComponentInfo{inc.trilokia.gfxtool/inc.trilokia.gfxtool.activity.SplashActivity}" drawable="gltool" />
+	<item component="ComponentInfo{com.latch.android.latchapp/com.latch.android.latchapp.screen.splash.SplashActivity}" drawable="latch" />
+	<item component="ComponentInfo{com.microsoft.stream/com.microsoft.stream.ui.activities.SplashActivity}" drawable="microsoft_stream" />
+	<item component="ComponentInfo{com.rebelbinary.onlyone/com.ansca.corona.CoronaActivity}" drawable="only_one" />
+	<item component="ComponentInfo{com.oriels.pa/com.oriels.pa.MainActivity}" drawable="oriels_icon_pack" />
+	<item component="ComponentInfo{com.mrbimc.selinux/com.mrbimc.selinux.MainActivity}" drawable="selinux_mode_changer" />
+	<item component="ComponentInfo{app.symfonik.music.player/app.symfonik.ui.MainActivity}" drawable="symfonium" />
 </resources>
