--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -641,6 +641,16 @@
 	<item drawable="shopeefood" />
 	<item drawable="shreddit" />
 	<item drawable="student_calendar" />
+	<item drawable="coke_on" />
+	<item drawable="dailyhunt" />
+	<item drawable="dynamix" />
+	<item drawable="gltool" />
+	<item drawable="latch" />
+	<item drawable="microsoft_stream" />
+	<item drawable="only_one" />
+	<item drawable="oriels_icon_pack" />
+	<item drawable="selinux_mode_changer" />
+	<item drawable="symfonium" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -3201,6 +3211,7 @@
 	<item drawable="coinspot" />
 	<item drawable="coinswitch" />
 	<item drawable="cointelegraph" />
+	<item drawable="coke_on" />
 	<item drawable="coles" />
 	<item drawable="collabora_office" />
 	<item drawable="collateral" />
@@ -3347,6 +3358,7 @@
 	<item drawable="daily_note" />
 	<item drawable="daily_schedule" />
 	<item drawable="daily_yoga" />
+	<item drawable="dailyhunt" />
 	<item drawable="dailyart" />
 	<item drawable="dailybean" />
 	<item drawable="dailymotion" />
@@ -3623,6 +3635,7 @@
 	<item drawable="dw" />
 	<item drawable="dynalist" />
 	<item drawable="dynamite_headdy" />
+	<item drawable="dynamix" />
 	<item drawable="dyson_link" />
 
 	<category title="E" />
@@ -4176,6 +4189,7 @@
 	<item drawable="globoplay" />
 	<item drawable="glovo" />
 	<item drawable="glowing_bear" />
+	<item drawable="gltool" />
 	<item drawable="gmaps_wv" />
 	<item drawable="gmx" />
 	<item drawable="gnucash" />
@@ -4829,6 +4843,7 @@
 	<item drawable="last__pass_authenticator" />
 	<item drawable="last_day_on_earth_survival" />
 	<item drawable="last_fm" />
+	<item drawable="latch" />
 	<item drawable="lawnchair_launcher" />
 	<item drawable="lawnchair_launcher_settings" />
 	<item drawable="lawnicons" />
@@ -5270,6 +5285,7 @@
 	<item drawable="microsoft_powerpoint" />
 	<item drawable="microsoft_remote_desktop" />
 	<item drawable="microsoft_sharepoint" />
+	<item drawable="microsoft_stream" />
 	<item drawable="microsoft_surface_audio" />
 	<item drawable="microsoft_teams" />
 	<item drawable="microsoft_to_do" />
@@ -5881,6 +5897,7 @@
 	<item drawable="onleihe" />
 	<item drawable="online_campus" />
 	<item drawable="online_tv_recorder" />
+	<item drawable="only_one" />
 	<item drawable="onlyoffice_documents" />
 	<item drawable="ontario_tech_mobile" />
 	<item drawable="oo" />
@@ -5948,6 +5965,7 @@
 	<item drawable="orderkuota" />
 	<item drawable="oreilly" />
 	<item drawable="orfox" />
+	<item drawable="oriels_icon_pack" />
 	<item drawable="organic_maps" />
 	<item drawable="organizze" />
 	<item drawable="orgro" />
@@ -6793,6 +6811,7 @@
 	<item drawable="self" />
 	<item drawable="selfprivacy" />
 	<item drawable="selfwealth" />
+	<item drawable="selinux_mode_changer" />
 	<item drawable="send_anywhere" />
 	<item drawable="send_files_to_tv" />
 	<item drawable="send_to_kindle" />
@@ -7267,6 +7286,7 @@
 	<item drawable="swype" />
 	<item drawable="sygic" />
 	<item drawable="symbolab" />
+	<item drawable="symfonium" />
 	<item drawable="symphony" />
 	<item drawable="symphony_player" />
 	<item drawable="synapse" />
