--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10947,4 +10947,18 @@
 	<item component="ComponentInfo{com.paradyme.solarsmash/com.unity3d.player.UnityPlayerActivity}" drawable="solar_smash" />
 	<item component="ComponentInfo{ru.iamtagir.game.android/com.unity3d.player.UnityPlayerActivity}" drawable="that_level_again" />
 	<item component="ComponentInfo{com.netmarble.nanagb/com.netmarble.fpplugin.FPActivity}" drawable="the_seven_deadly_sins" />
+	<item component="ComponentInfo{com.isicristob.solana/com.ironman.tiktik.MainActivity}" drawable="loklok" />
+	<item component="ComponentInfo{com.isicristob.geist/com.ironman.tiktik.MainActivity}" drawable="loklok" />
+	<item component="ComponentInfo{com.isicristob.cardano/com.ironman.tiktik.MainActivity}" drawable="loklok" />
+	<item component="ComponentInfo{com.isicristob.mirror/com.ironman.tiktik.MainActivity}" drawable="loklok" />
+	<item component="ComponentInfo{com.cloudflare.onedotonedotonedotonf/com.cloudflare.app.presentation.main.SplashActivity}" drawable="_1111" />
+	<item component="ComponentInfo{com.ea.gp.nbamobile/com.ea.game.nba.NBAMainActivity}" drawable="nba_live" />
+	<item component="ComponentInfo{.TisuWhatsapp/com.whatsapp.Main}" drawable="whatsapp" />
+	<item component="ComponentInfo{com.ad2whatsapp/com.ad2whatsapp.0}" drawable="whatsapp" />
+	<item component="ComponentInfo{com.Tiago/com.whatsapp.Main}" drawable="whatsapp" />
+	<item component="ComponentInfo{com.gameloft.android.SAMS.GloftA9SS/com.gameloft.android.SAMS.GloftA9SS.MainActivity}" drawable="asphalt_9" />
+	<item component="ComponentInfo{com.og.multibrawl.zap/com.supercell.brawlstars.GameApp}" drawable="brawl_stars" />
+	<item component="ComponentInfo{com.android.lmc82/com.android.camera.CameraLauncher}" drawable="camera" />
+	<item component="ComponentInfo{com.perracolabs.cp/com.perracolabs.cameringo.Main}" drawable="camera" />
+	<item component="ComponentInfo{net.kollnig.missioncontrol.play/eu.faircode.netguard.ActivityMain}" drawable="trackercontrol" />
 </resources>
